--- a/index.html
+++ b/index.html
@@ -89,5 +89,15 @@
           </div>
         </div>
       </div>
+
+      <div class="container">
+        <div class="resume__block">
+          <div class="skills">
+            <h3 class="skills__header">Skills</h3>
+            <p class="skills__text">I'm interested in sport. And like to study) </p>
+          </div>
+        </div>
+      </div>
+
   </body>
 </html>
