clean resume from inactual information

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                       <span class="experiences__company-project-role">Leading specialist of the department IT </span>
                       <h3 class="experiences__company-project-name">specialist</h3>
                       <ul class="experiences__company-project-responsibilities">
-                        <li>PHP, JS develop</li>
-                        <li>ZNO </li>
+                        <li>ZNO</li>
                       </ul>
                     </div>
                   </div>
@@ -131,8 +130,7 @@
                       <span class="experiences__company-project-role">Front end developer</span>
                       <h3 class="experiences__company-project-name">specialist</h3>
                       <ul class="experiences__company-project-responsibilities">
-                        <li>create HTML templates</li>
-                        <li>add style to sites</li>
+                        <li>create HTML templates add style to sites</li>
                       </ul>
                     </div>
                   </div>
@@ -148,7 +146,6 @@
                       <h3 class="experiences__company-project-name">Mathematics</h3>
                       <ul class="experiences__company-project-responsibilities">
                         <li>teach</li>
-                        <li>love work</li>
                       </ul>
                     </div>
                   </div>
