--- a/index.html
+++ b/index.html
@@ -184,5 +184,13 @@
         </div>
       </div>
 
+      <div class="container">
+        <div class="resume__block">
+          <div class="hobby">
+            <h3 class="hobby__header">Hobby</h3>
+            <p class="hobby__text">I like to cook! </p>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
